--- a/Getting_uszipcode_data.ipynb
+++ b/Getting_uszipcode_data.ipynb
@@ -357,6 +357,318 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://raw.githubusercontent.com/siddhantmaharana/atlytics_team_recylers/master/data/zip_data.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "zip_df = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ZIP Code</th>\n",
+       "      <th>count</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80002.0</td>\n",
+       "      <td>53</td>\n",
+       "      <td>co</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>80003.0</td>\n",
+       "      <td>99</td>\n",
+       "      <td>co</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>80004.0</td>\n",
+       "      <td>126</td>\n",
+       "      <td>co</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>80005.0</td>\n",
+       "      <td>140</td>\n",
+       "      <td>co</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>80007.0</td>\n",
+       "      <td>159</td>\n",
+       "      <td>co</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0 ZIP Code  count state\n",
+       "0           0  80002.0     53    co\n",
+       "1           1  80003.0     99    co\n",
+       "2           2  80004.0    126    co\n",
+       "3           3  80005.0    140    co\n",
+       "4           4  80007.0    159    co"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8054.0     9\n",
+       "94304.0    8\n",
+       "55344.0    8\n",
+       "43026.0    8\n",
+       "30348.0    7\n",
+       "          ..\n",
+       "48757.0    1\n",
+       "14445.0    1\n",
+       "11786.0    1\n",
+       "12164.0    1\n",
+       "55313.0    1\n",
+       "Name: ZIP Code, Length: 9083, dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_df[\"ZIP Code\"].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ZIP Code</th>\n",
+       "      <th>count</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1250</td>\n",
+       "      <td>871</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2502</td>\n",
+       "      <td>871</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3754</td>\n",
+       "      <td>871</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>ct</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5327</td>\n",
+       "      <td>532</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>mn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6172</td>\n",
+       "      <td>839</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>nj</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8572</td>\n",
+       "      <td>2391</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>192</td>\n",
+       "      <td>ny</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8727</td>\n",
+       "      <td>134</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>or</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10471</td>\n",
+       "      <td>1301</td>\n",
+       "      <td>94304.0</td>\n",
+       "      <td>105</td>\n",
+       "      <td>tx</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0 ZIP Code  count state\n",
+       "1250          871  94304.0      6    ct\n",
+       "2502          871  94304.0      6    ct\n",
+       "3754          871  94304.0      6    ct\n",
+       "5327          532  94304.0      1    mn\n",
+       "6172          839  94304.0      3    nj\n",
+       "8572         2391  94304.0    192    ny\n",
+       "8727          134  94304.0      4    or\n",
+       "10471        1301  94304.0    105    tx"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Problem ZIP Code 94304 is  PALO ALTO CA\n",
+    "zip_df[zip_df[\"ZIP Code\"]=='94304.0']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>ZIP Code</th>\n",
+       "      <th>count</th>\n",
+       "      <th>state</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>11599</td>\n",
+       "      <td>819</td>\n",
+       "      <td>H2C2G</td>\n",
+       "      <td>1</td>\n",
+       "      <td>wa</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0 ZIP Code  count state\n",
+       "11599         819    H2C2G      1    wa"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zip_df[zip_df[\"ZIP Code\"]=='H2C2G']"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
